project-2/examples/good/05-02-if-else.lg
int main() {
    int x = 3;
    if (x < 0) {
        print(-x);
    }
    else {
        print(x); // 3
    }
    
    return 0;
}
