project-2/examples/bad/continue-outside.lg
int main() {
    continue; // compile error
    
    return 0;
}
